--- a/思路.md
+++ b/思路.md
@@ -1,33 +1,54 @@
+
+大体思路就是，工程里加一个类，加一个cpp文件一个h文件，这个类包装一个包含了配置内容的结构体，然后有读json文件的函数，有写json文件的函数，还有提取某个key-value的方法，json文件内容是可变的，比较灵活，易于扩展。
+
+
 ```mermaid
-graph TD;
-A-->B;
-A-->C;
+classDiagram
+JsonStruct --|> JsonClass
+JsonClass : JSonStruct
+JsonClass : save()
+JsonClass : read()
+JsonClass : getA()
+JsonClass : getB()
+JsonClass : setA()
+JsonClass : setB()
+class JsonStruct{
+	int A
+	int B
+}
+class MainClass{
+	JsonClass
+	...
+}
 ```
 
-大体思路就是，工程里加一个类，加一个cpp文件一个h文件，
-```mermaid
-JsonClass : Struct JsonStruct
-JSonClass : void ReadJson() 
-JSonClass : void SaveJson() 
-JSonClass : JsonStruct GetJson() 
-JSonClass : int getA()
-JSonClass : int getB()
-Class01 <|-- JSonClass : Cool
-```
-
-```mermaid
-
-Class01 <|-- AveryLongClass : Cool
-Class03 *-- Class04
-Class05 o-- Class06
-Class07 .. Class08
-Class09 --> C2 : Where am i?
-Class09 --* C3
-Class09 --|> Class07
-Class07 : equals()
-Class07 : Object[] elementData
-Class01 : size()
-Class01 : int chimp
-Class01 : int gorilla
-Class08 <--> C2: Cool label
+json文件定义：
+```json
+{
+    "version":1001,
+    "controller":[{
+        "box":{
+            "carRear" : true,
+            "carSide" : true,
+            "3DBox":true,
+            "Pedestrian":true,
+            "Cyclist":true,
+            "TrafficLight":true,
+            "TrafficSign":true
+        },
+        "line":{
+            "Lane":true,
+            "RodeEdge":true,
+            "stopLine":true,
+            "freeSpace":true
+        },
+        "3Dview":{
+            "EQ4":true,
+            "PNC":true,
+            "frontRadar":true,
+            "cornerRadar":true
+        }
+    }
+]
+}
 ```
