--- a/杂项/知名镜像源.md
+++ b/杂项/知名镜像源.md
@@ -1,28 +1,28 @@
-[https://mirrors.tuna.tsinghua.edu.cn/](https://links.jianshu.com/go?to=https%3A%2F%2Fmirrors.tuna.tsinghua.edu.cn%2F) 清华源  
-[https://developer.aliyun.com/mirror/](https://links.jianshu.com/go?to=https%3A%2F%2Fdeveloper.aliyun.com%2Fmirror%2F) 阿里云源  
-[http://mirrors.163.com/ubuntu/](https://links.jianshu.com/go?to=http%3A%2F%2Fmirrors.163.com%2Fubuntu%2F) 网易源  
-[https://mirrors.ustc.edu.cn/](https://links.jianshu.com/go?to=https%3A%2F%2Fmirrors.ustc.edu.cn%2F) 中科大源  
-[http://mirrors.zju.edu.cn/](https://links.jianshu.com/go?to=http%3A%2F%2Fmirrors.zju.edu.cn%2F) 浙大源  
-[http://mirrors.sohu.com/](https://links.jianshu.com/go?to=http%3A%2F%2Fmirrors.sohu.com%2F) 搜狐源  
-[http://ftp.sjtu.edu.cn/](https://links.jianshu.com/go?to=http%3A%2F%2Fftp.sjtu.edu.cn%2F) 上海交大源  
-[http://mirror.bjtu.edu.cn/](https://links.jianshu.com/go?to=http%3A%2F%2Fmirror.bjtu.edu.cn%2F) 北京理工大源  
-[http://mirror.bjtu.edu.cn/](https://links.jianshu.com/go?to=http%3A%2F%2Fmirror.bjtu.edu.cn%2F) 北京交大源
+[https://mirrors.tuna.tsinghua.edu.cn/](https://mirrors.tuna.tsinghua.edu.cn) 清华源  
+[https://developer.aliyun.com/mirror/](https://developer.aliyun.com/mirror) 阿里云源  
+[http://mirrors.163.com/ubuntu/](http://mirrors.163.com/ubuntu) 网易源  
+[https://mirrors.ustc.edu.cn/](https://mirrors.ustc.edu.cn) 中科大源  
+[http://mirrors.zju.edu.cn/](http://mirrors.zju.edu.cn) 浙大源  
+[http://mirrors.sohu.com/](http://mirrors.sohu.com) 搜狐源  
+[http://ftp.sjtu.edu.cn/](http://ftp.sjtu.edu.cn) 上海交大源  
+[http://mirror.bjtu.edu.cn/](http://mirror.bjtu.edu.cn) 北京理工大源  
+[http://mirror.bjtu.edu.cn/](http://mirror.bjtu.edu.cn) 北京交大源
 
 ---
 Maven地址
-[http://mirrors.163.com/maven/](https://links.jianshu.com/go?to=http%3A%2F%2Fmirrors.163.com%2Fmaven%2F) 网易  
-[https://maven.aliyun.com/mvn/guide](https://links.jianshu.com/go?to=https%3A%2F%2Fmaven.aliyun.com%2Fmvn%2Fguide) 阿里云
+[http://mirrors.163.com/maven/](http://mirrors.163.com/maven) 网易  
+[https://maven.aliyun.com/mvn/guide](https://maven.aliyun.com/mvn/guide) 阿里云
 
 ---
 
 安卓工具
-[https://www.androiddevtools.cn/](https://links.jianshu.com/go?to=https%3A%2F%2Fwww.androiddevtools.cn%2F)
+[https://www.androiddevtools.cn/](https://www.androiddevtools.cn)
 
 ---
 
 pypi镜像
-阿里云: [http://mirrors.aliyun.com/pypi/simple/](https://links.jianshu.com/go?to=http%3A%2F%2Fmirrors.aliyun.com%2Fpypi%2Fsimple%2F)  
-中国科技大学: [https://pypi.mirrors.ustc.edu.cn/simple/](https://links.jianshu.com/go?to=https%3A%2F%2Fpypi.mirrors.ustc.edu.cn%2Fsimple%2F)  
+阿里云: [http://mirrors.aliyun.com/pypi/simple/](http://mirrors.aliyun.com/pypi/simple)  
+中国科技大学: [https://pypi.mirrors.ustc.edu.cn/simple/](https://pypi.mirrors.ustc.edu.cn/simple)  
 douban: [http://pypi.douban.com/simple](https://links.jianshu.com/go?to=http%3A%2F%2Fpypi.douban.com%2Fsimple)  
 Python官方: [https://pypi.python.org/simple](https://links.jianshu.com/go?to=https%3A%2F%2Fpypi.python.org%2Fsimple)  
 v2ex: [http://pypi.v2ex.com/simple](https://links.jianshu.com/go?to=http%3A%2F%2Fpypi.v2ex.com%2Fsimple)  
