--- a/构建命令.md
+++ b/构建命令.md
@@ -3,7 +3,7 @@
 ```Shell
 # visual studio 2022 win32
 cmake -G "Visual Studio 17 2022" -A Win32 ..
-cmake -G "MinGW Makefiles"
+cmake -G "MinGW Makefiles"  ..
 ```
 
 ```bash
@@ -27,3 +27,27 @@ cmake --build .
 # 或者
 make
 ```
+
+## vcpkg
+```bash
+
+vcpkg integrate install
+cmake -G "MinGW Makefiles" -DCMAKE_TOOLCHAIN_FILE=D:/CodingLibrary/vcpkg/scripts/buildsystems/vcpkg.cmake ..
+
+
+cmake -G "Visual Studio 17 2022" -DCMAKE_TOOLCHAIN_FILE=D:/CodingLibrary/vcpkg/scripts/buildsystems/vcpkg.cmake ..
+```
+
+# 报错记录
+
+编译中出现了
+```
+CMake Error at CMakeLists.txt:35 (find_package):
+  Could not find a configuration file for package "zeromq" that is compatible
+  with requested version "4.3.4".
+
+  The following configuration files were considered but not accepted:
+
+    D:/CodingLibrary/vcpkg/installed/x86-windows/share/zeromq/zeromqConfig.cmake, version: 4.3.4 (32bit)
+```
+或类似的报错，检查编译器64位还是32位。
