--- a/技术栈/ubuntu/各种压缩命令行使用.md
+++ b/技术栈/ubuntu/各种压缩命令行使用.md
@@ -63,3 +63,49 @@ eg:
 ```
 tar -uf all.tar logo.gif
 ```
+
+---
+
+# 7z
+
+__压缩：__
+```
+7z a pack.7z pack_7z -r
+```
+a：添加文件到pack.7z
+pack_7z：要压缩的文件
+-r：递归地把子目录中的内容也压缩进来
+
+指定密码：
+```
+7z a file.7z subdir* -p123456  //指定密码为123456
+```
+
+
+__解压：__
+```
+7z x pack.7z
+
+7z e pack.7z
+```
+x：把压缩的目录保留，压缩前文件夹结构是什么样压缩后就是什么样
+e：所有文件解压到一个文件夹中，不保留之前的文件结构
+
+解压到指定目录：
+```
+7z x file.7z -ofile/
+```
+
+__更新&删除__
+
+更新：
+```
+7z u file.7z *.py
+```
+添加所有.py文件到7z文件中
+
+删除：
+```
+7z d file.7z *.py -r
+```
+删除所有.py文件
